--- a/platformio.ini
+++ b/platformio.ini
@@ -13,22 +13,23 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	chrmlinux/rssRead@^0.1.0
+	knolleary/PubSubClient@^2.8
 	majicdesigns/MD_Parola@^3.6.2
 	majicdesigns/MD_MAX72XX@^3.3.1
-    paulstoffregen/Time @ ^1.6.1
-
-
+	paulstoffregen/Time @ ^1.6.1
+	arduino-libraries/NTPClient@^3.2.1
+	jchristensen/Timezone@^1.2.4
+	powerbroker2/SafeString@^4.1.27
+	nickgammon/Regexp@^0.1.0
 
 [env:esp32dev-prod]
 monitor_speed = 115200
 build_type = release
-
-
+upload_port = /dev/tty.usbserial-0001
 
 [env:esp32dev-debug]
 monitor_speed = 115200
-debug_speed = 1000
+debug_speed = 2000
 debug_tool = esp-prog
 upload_protocol = esp-prog
 build_type = debug
