OTA and debug consistency

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,8 +19,10 @@ lib_deps =
 	paulstoffregen/Time @ ^1.6.1
 	arduino-libraries/NTPClient@^3.2.1
 	jchristensen/Timezone@^1.2.4
-	powerbroker2/SafeString@^4.1.27
 	nickgammon/Regexp@^0.1.0
+	ayushsharma82/ElegantOTA @ ^3.1.6
+	mathieucarbou/ESPAsyncWebServer @ ^3.3.17
+build_flags=-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
 
 [env:esp32dev-prod]
 monitor_speed = 115200
