OTA update modified

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,10 @@ lib_deps =
 	nickgammon/Regexp@^0.1.0
 	ayushsharma82/ElegantOTA @ ^3.1.6
 	mathieucarbou/ESPAsyncWebServer @ ^3.3.17
-build_flags=-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
+build_flags=
+	!make
+	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\"'
+
 
 [env:esp32dev-prod]
 monitor_speed = 115200
