Add autmatically generated files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ lib/README
 test/README
 .vscode/settings.json
 .DS_Store
+include/pages/RssMatrix.css.h
+WEBSources/update-min.html
+WEBSources/RssMatrix-min.css
+include/pages/update.html.h
