MQTT publishing stats / UTF-8 mapping

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,15 +22,26 @@ lib_deps =
 	nickgammon/Regexp@^0.1.0
 	ayushsharma82/ElegantOTA @ ^3.1.6
 	mathieucarbou/ESPAsyncWebServer @ ^3.3.17
-build_flags=
-	!make
-	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\"'
+	bblanchon/ArduinoJson@^7.2.1
 
 
-[env:esp32dev-prod]
+
+[env:esp32dev-prod-12]
 monitor_speed = 115200
 build_type = release
 upload_port = /dev/tty.usbserial-0001
+build_flags = 
+	!make
+	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\" -D MAX_DEVICES=12'
+
+
+[env:esp32dev-prod-10]
+monitor_speed = 115200
+build_type = release
+upload_port = /dev/tty.usbserial-0001
+build_flags = 
+	!make
+	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\" -D MAX_DEVICES=10'
 
 [env:esp32dev-debug]
 monitor_speed = 115200
@@ -38,4 +49,6 @@ debug_speed = 2000
 debug_tool = esp-prog
 upload_protocol = esp-prog
 build_type = debug
-
+build_flags = 
+	!make
+	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\"'
