quotation and platformio and HA blueprint

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ build_type = release
 upload_port = /dev/tty.usbserial-0001
 build_flags = 
 	!make
-	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\" -D MAX_DEVICES=12'
+	!echo '-D FIRMWAREVERSION=\"'$(cat ./firmwareVersion)'\" -D MAX_DEVICES=12'
 
 
 [env:esp32dev-prod-10]
@@ -41,7 +41,7 @@ build_type = release
 upload_port = /dev/tty.usbserial-0001
 build_flags = 
 	!make
-	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\" -D MAX_DEVICES=10'
+	!echo '-D FIRMWAREVERSION=\"'$(cat ./firmwareVersion)'\" -D MAX_DEVICES=10'
 
 [env:esp32dev-debug]
 monitor_speed = 115200
@@ -51,4 +51,4 @@ upload_protocol = esp-prog
 build_type = debug
 build_flags = 
 	!make
-	!echo '-D FIRMWAREVERSION=\\"'$(cat ./firmwareVersion)'\\"'
+	!echo '-D FIRMWAREVERSION=\"'$(cat ./firmwareVersion)'\"'
